# TempFile

./: .gitmodules  CMakeLists.txt  Makefile  README.md  example.cpp  gen.cpp
include/: tmpfile.h
include/tmpfile/: tmpfile.h
src/: randombytes.c  randombytes.h  tmpfile.cpp
testBuilder/: CMakeLists.txt
